# tiny-time-tracker

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  activate.bat  enable-auditing.ps1
.github/workflows/: rust.yml
src/: main.rs  mswin.rs  scheduler.rs
src/db/: db.rs
src/trigger/: Cargo.toml
src/trigger/src/: main.rs
static/: index.html
templates/: index.html  task_detail.html
