[package]
name = "tiny-time-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.33"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
serde_json = "1.0"
rfd = "0.15.2"
winapi = { version = "0.3", features = ["fileapi"] }
tempfile = "3.17.0"

[[bin]]
name = "tiny-time-tracker"
path = "src/main.rs"

[[bin]]
name = "tt-trigger"
path = "src/trigger/main.rs"