[workspace]
members = ["src/trigger", "."]

[workspace.dependencies]
rusqlite = "0.33"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
serde_json = "1.0"
rfd = "0.15.2"
winapi = { version = "0.3", features = ["fileapi"] }
tempfile = "3.17.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
askama = "0.12.1"

[package]
name = "tiny-time-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
rfd = { workspace = true }
winapi = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
dotenv = { workspace = true }
askama = { workspace = true }

[[bin]]
name = "tiny-time-tracker"
path = "src/main.rs"

[package.metadata.askama]
dir = "templates"
